--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,13 @@
 annotated-types==0.7.0
+async-timeout==5.0.1
+audioread==3.0.1
 blinker==1.9.0
 cachetools==5.5.2
 certifi==2025.4.26
+cffi==1.17.1
 charset-normalizer==3.4.2
 click==8.1.8
+decorator==5.2.1
 Flask==3.1.0
 google-ai-generativelanguage==0.6.15
 google-api-core==2.24.2
@@ -20,18 +24,35 @@ idna==3.10
 importlib_metadata==8.7.0
 itsdangerous==2.2.0
 Jinja2==3.1.6
+joblib==1.5.0
+lazy_loader==0.4
+librosa==0.11.0
+llvmlite==0.43.0
 MarkupSafe==3.0.2
+msgpack==1.1.0
+numba==0.60.0
+numpy==2.0.2
 packaging==25.0
+platformdirs==4.3.8
+pooch==1.8.2
 proto-plus==1.26.1
 protobuf==5.29.4
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
+pycparser==2.22
 pydantic==2.11.4
 pydantic_core==2.33.2
 pyparsing==3.2.3
 python-dotenv==1.1.0
+redis==6.0.0
 requests==2.32.3
 rsa==4.9.1
+scikit-learn==1.6.1
+scipy==1.13.1
+soundfile==0.13.1
+soxr==0.5.0.post1
+spotipy==2.25.1
+threadpoolctl==3.6.0
 tqdm==4.67.1
 typing-inspection==0.4.0
 typing_extensions==4.13.2
